# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2022-02-26 Michael Truog   <mjtruog at protonmail dot com>

    * Update Erlang External Term Format encoding used by the
      Go/Haskell/JavaScript/OCaml/Perl/PHP/Python/Ruby CloudI API
      to prepare for Erlang/OTP 26 deprecating latin1 atoms

2022-01-28 Michael Truog   <mjtruog at protonmail dot com>

    * Improve filepath normalization validation in cloudi_core configuration
      for the CloudI Service API functions services_update,
      code_path_add and code_path_remove

2022-01-15 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify Erlang compiler warning options (based on Erlang/OTP 24.2)

2022-01-14 Michael Truog   <mjtruog at protonmail dot com>

    * Improve filepath normalization validation in cloudi_core configuration
      for the CloudI Service API functions services_update,
      code_path_add and code_path_remove
    * Provide {error, timeout} response in cloudi_service_api_requests
      when an invalid argument is provided (unparsable)

2022-01-13 Michael Truog   <mjtruog at protonmail dot com>

    * Update PHP integration tests threading-related comments

2022-01-12 Michael Truog   <mjtruog at protonmail dot com>

    * Remove Erlang/OTP < 22.0 compatibility

2022-01-10 Michael Truog   <mjtruog at protonmail dot com>

    * Require Erlang/OTP >= 22.0 for depending on the Erlang/OTP kernel logger
      instead of previous usage of sasl (for logging supervisor progress)
        * Remove sasl from the cloudi_core dependencies
        * Remove install_erlang_sasl_time and runtime_erlang_sasl_version
          from the CloudI Service API code_status result
    * Java CloudI API compilation now uses javac -encoding UTF-8
    * Update reltool_util
    * Update varpool

2022-01-06 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_monitoring cloudi_core state use
    * Improve cloudi_core logger support for internal services