@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2022-02-27 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Update Go CloudI API Erlang External Term Format encoding
+
 2022-02-26 Michael Truog   <mjtruog at protonmail dot com>
 
     * Update Erlang External Term Format encoding used by the
